changes of latest code

--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/auditsetfuncprofilegridpage/auditsetfuncprofilegridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/auditsetfuncprofilegridpage/auditsetfuncprofilegridpage.component.html
@@ -3,7 +3,7 @@
     <div class="row p-2">
         <div class="col">
             <div class="d-flex justify-content-between align-items-center">
-                <h4 class="page-title flex-grow-1">AUDIT TRIALS DEPARTMENT TYPE</h4>
+                <h4 class="page-title flex-grow-1">Functional Profile List Audit Trails</h4>
 
                 <div class="back-icon custom-back-icon" style="margin-right: 10px;">
                     <a href="javascript:void(0);" onclick="history.back();">
@@ -28,7 +28,7 @@
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
                 <p-table #templatesTable [value]="types" 
-                [globalFilterFields]="['Documenttypename', 'documenttypeprefix', 'Description','ModifiedBy','Status']"
+                [globalFilterFields]="['EntityName', 'UserName']"
                 tableStyleClass="table table-striped"
                 [rows]="itemsPerPage"
                 [paginator]="true" 
@@ -39,13 +39,12 @@
                         <tr>
                             <th>S.No</th>
                             
-                             <th pSortableColumn="EntityName" style="width:20%">Entity Name<p-sortIcon field="Entity Name"></p-sortIcon></th>
-                             <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
-                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th>
+                             <th pSortableColumn="EntityName" style="width:20%">Role Name<p-sortIcon field="EntityName"></p-sortIcon></th>
+                             <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
+                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
 
-                             <th pSortableColumn="UserName" style="width:20%">UserName<p-sortIcon field="User Name"></p-sortIcon></th>
-                              
-                             
+                             <th pSortableColumn="UserName" style="width:20%">Initiated By<p-sortIcon field="UserName"></p-sortIcon></th>
+                             <th pSortableColumn="UserName" style="width:20%">Initiated On<p-sortIcon field="UserName"></p-sortIcon></th>
     
                         </tr>
                     </ng-template>
@@ -56,9 +55,10 @@
                                 <a [routerLink]="['/auditadddfunctionalprofile']" [queryParams]="{ DocumentName: doc?.EntityName }">{{doc?.EntityName}}</a>
                             </td>                
                            
-                            <td>{{doc?.Message }}</td>
-                            <td>{{doc?.Type }}</td>
+                            <!-- <td>{{doc?.Message }}</td>
+                            <td>{{doc?.Type }}</td> -->
                             <td>{{doc?.UserName}}</td>
+                            <td>{{doc?.EntityInfo?.createddate | date:'dd/MM/yyyy HH:mm'}}</td>
                             
                         </tr>
                     </ng-template>
