--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-master-home/document-master-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-master-home/document-master-home.component.html
@@ -16,7 +16,7 @@
     </div>
     
 
-    <div class="col col-lg-3">
+    <div class="col col-lg-3" >
       <div class="card" (click)="navigateTo('document-types')">
         <div class="card-body">
           <!-- <i class="fa fa-chart-pie"></i> -->
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="col col-lg-3">
+    <div class="col col-lg-3" >
       <div class="card" (click)="navigateTo('templates')">
         <div class="card-body">
           <i class="fa fa-palette"></i>
@@ -37,7 +37,7 @@
 
     
 
-    <div class="col col-lg-3">
+    <div class="col col-lg-3" >
       <div class="card" (click)="navigateTo('workflow')">
         <div class="card-body">
           <i class="fa fa-fan"></i>
@@ -50,7 +50,7 @@
       <div class="card" (click)="navigateTo('auditdocmaster')">
         <div class="card-body">
           <i class="fa fa-message"></i>
-          <h5 class="card-title">Audit Trials Document Master</h5>
+          <h5 class="card-title">Audit Trials</h5>
         </div>
       </div>
     </div> 
