--- a/VlimsApp/ClientApp/src/app/modules/manager/components/auditmanagerhomepage/auditmanagerhomepage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/auditmanagerhomepage/auditmanagerhomepage.component.html
@@ -44,15 +44,17 @@
           </div>
         </div>
       </div> 
+
+
   
-       <!-- <div class="col col-lg-3">
-        <div class="card" (click)="navigateTo('auditdocumentrevision')">
+        <div class="col col-lg-3">
+        <div class="card" (click)="navigateTo('auditprint')">
           <div class="card-body">
             <i class="fa fa-cash-register"></i>
-            <h5 class="card-title">Document Revision</h5>
+            <h5 class="card-title">Document Print</h5>
           </div>
         </div>
-      </div>  -->
+       </div> 
    
       <!-- <div class="col col-lg-3">
         <div class="card" (click)="navigateTo('auditdocumentprint')">
