--- a/VlimsApp/ClientApp/src/app/modules/manager/components/auditprintgridpagew/auditprintgridpagew.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/auditprintgridpagew/auditprintgridpagew.component.html
@@ -3,7 +3,7 @@
     <div class="row p-2">
         <div class="col">
             <div class="d-flex justify-content-between align-items-center">
-                <h4 class="page-title flex-grow-1">Document Template List Audit Trails </h4>
+                <h4 class="page-title flex-grow-1">Document Print List Audit Trails</h4>
 
                 <div class="back-icon custom-back-icon" style="margin-right: 10px;">
                     <a href="javascript:void(0);" onclick="history.back();">
@@ -28,7 +28,7 @@
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
                 <p-table #templatesTable [value]="types" 
-                [globalFilterFields]="['Unique', 'EntityName', 'UserName','CreatedDate']"
+                [globalFilterFields]="['Documenttypename', 'documenttypeprefix', 'Description','ModifiedBy','Status']"
                 tableStyleClass="table table-striped"
                 [rows]="itemsPerPage"
                 [paginator]="true" 
@@ -38,12 +38,16 @@
                     <ng-template pTemplate="header">
                         <tr>
                             <th>S.No</th>
-                            <th pSortableColumn="Unique" style="width:20%">Template Code<p-sortIcon field="Unique"E></p-sortIcon></th>
-                             <th pSortableColumn="EntityName" style="width:20%">Template Name<p-sortIcon field="EntityName"></p-sortIcon></th>
+                            
+                             <th pSortableColumn="EntityName" style="width:20%"> Print Id<p-sortIcon field="Entity Name"></p-sortIcon></th>
+                             <th pSortableColumn="EntityName" style="width:20%"> Document  Number<p-sortIcon field="Entity Name"></p-sortIcon></th>
+                             <th pSortableColumn="EntityName" style="width:20%"> Document Title <p-sortIcon field="Entity Name"></p-sortIcon></th>
+                             <th pSortableColumn="EntityName" style="width:20%"> Document Type<p-sortIcon field="Entity Name"></p-sortIcon></th>
+                             <th pSortableColumn="EntityName" style="width:20%"> No Of Copies<p-sortIcon field="Entity Name"></p-sortIcon></th>
                              <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
                              <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
-                             <th pSortableColumn="UserName" style="width:20%">Initiated By<p-sortIcon field="UserName"></p-sortIcon></th>
-                              <th pSortableColumn="CreatedDate" style="width:1n00px">Initiated On<p-sortIcon field="CreatedDate"></p-sortIcon></th>
+                             <th pSortableColumn="UserName" style="width:20%">Printed By<p-sortIcon field="User Name"></p-sortIcon></th>
+                              <th pSortableColumn="ModifiedDate" style="width:1n00px">Printed On<p-sortIcon field="ModifiedDate"></p-sortIcon></th>
     
                         </tr>
                     </ng-template>
@@ -51,16 +55,18 @@
                         <tr>  
                             <td>{{ i + 1 }}</td> 
                             <td>
-                                <a [routerLink]="['/auditgridaddpagetemplate']" [queryParams]="{ DocumentName: doc?.EntityInfo?.Uniquecode }">{{doc?.Unique}}</a>
+                                <a [routerLink]="['/auditprinttaddpage']" [queryParams]="{ DocumentName: doc?.Unique }">{{doc?.Unique}}</a>
                             </td>
                 
-                            <td>
-                                {{doc?.EntityName}}
-                            </td>
+                            <td>{{doc?.EntityInfo?.DocumentNumber}}</td>
+                            <td>{{doc?.EntityInfo?.documenttitle}}</td>
+                            <td>{{doc?.EntityInfo?.printtype}}</td>
+                            <td>{{doc?.EntityInfo?.noofcopies}}</td>
+                           
                             <!-- <td>{{doc?.Message }}</td>
                             <td>{{doc?.Type }}</td> -->
                             <td>{{doc?.UserName}}</td>
-                            <td>{{ doc?.EntityInfo?.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</td>
+                            <td>{{doc?.EntityInfo?.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</td>
                         </tr>
                     </ng-template>
                 </p-table>
