--- a/VlimsApp/ClientApp/src/app/modules/manager/components/auditrequestgridpage/auditrequestgridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/auditrequestgridpage/auditrequestgridpage.component.html
@@ -3,7 +3,7 @@
     <div class="row p-2">
         <div class="col">
             <div class="d-flex justify-content-between align-items-center">
-                <h4 class="page-title flex-grow-1">Audit Trials Document Request</h4>
+                <h4 class="page-title flex-grow-1">Document Request List Audit Trials </h4>
 
                 <div class="back-icon custom-back-icon" style="margin-right: 10px;">
                     <a href="javascript:void(0);" onclick="history.back();">
@@ -28,7 +28,7 @@
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
                 <p-table #templatesTable [value]="types" 
-                [globalFilterFields]="['Documenttypename', 'documenttypeprefix', 'Description','ModifiedBy','Status']"
+                [globalFilterFields]="['Unique', 'department', 'Description','ModifiedBy','Status']"
                 tableStyleClass="table table-striped"
                 [rows]="itemsPerPage"
                 [paginator]="true" 
@@ -38,12 +38,13 @@
                     <ng-template pTemplate="header">
                         <tr>
                             <th>S.No</th>
-                            
-                             <th pSortableColumn="EntityName" style="width:20%">Entity Name<p-sortIcon field="Entity Name"></p-sortIcon></th>
-                             <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
-                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th>
-                             <th pSortableColumn="UserName" style="width:20%">UserName<p-sortIcon field="User Name"></p-sortIcon></th>
-                              <th pSortableColumn="ModifiedDate" style="width:1n00px">Modified Date<p-sortIcon field="ModifiedDate"></p-sortIcon></th>
+                            <!-- <th pSortableColumn="EntityName" style="width:20%">Request Code <p-sortIcon field="Entity Name"></p-sortIcon></th> -->
+                            <th pSortableColumn="Unique" style="width:20%">Document Type <p-sortIcon field="Unique"></p-sortIcon></th>
+                            <th pSortableColumn="department" style="width:20%">Department <p-sortIcon field="department"></p-sortIcon></th>
+                             <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th> -->
+                             <!-- <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
+                             <th pSortableColumn="UserName" style="width:20%">Requested By<p-sortIcon field="User Name"></p-sortIcon></th>
+                              <th pSortableColumn="ModifiedDate" style="width:1n00px">Requested On<p-sortIcon field="ModifiedDate"></p-sortIcon></th>
     
                         </tr>
                     </ng-template>
@@ -53,12 +54,16 @@
                             <td>
                                 <a [routerLink]="['/auditrequestaddpage']" [queryParams]="{ DocumentName: doc?.Unique }">{{doc?.Unique}}</a>
                             </td>
+
+                    
                 
-                          
-                            <td>{{doc?.Message }}</td>
-                            <td>{{doc?.Type }}</td>
+                      
+                          <td>{{doc?.EntityInfo?.department}}</td>
+
+                            <!-- <td>{{doc?.Message }}</td>
+                            <td>{{doc?.Type }}</td> -->
                             <td>{{doc?.UserName}}</td>
-                            <td>{{doc?.EntityInfo?.CreatedDate }}</td>
+                            <td>{{doc?.EntityInfo?.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</td>
                         </tr>
                     </ng-template>
                 </p-table>
