--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
@@ -59,7 +59,7 @@
       <div class="card" (click)="navigateTo('auditadmin')">
         <div class="card-body">
           <i class="fa fa-message"></i>
-          <h5 class="card-title">Audit Trials Admin Management</h5>
+          <h5 class="card-title">Audit Trails </h5>
         </div>
       </div>
     </div> 
