--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-role-add-page/audit-role-add-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-role-add-page/audit-role-add-page.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col">
         <div class="d-flex justify-content-between align-items-center">
-            <h4 class="page-title"><span class="bold-text">ROLE TYPE</span><br><span class="bold-text">AUDIT TRIALS</span></h4>
+            <h4 class="page-title"><span class="bold-text">Role </span><br><span class="bold-text">Audit Trails</span></h4>
                      
             
             <div class="back-icon">
@@ -23,7 +23,7 @@
                 
                 <div class="row">
                   <div class="col-sm-3">
-                      <strong>Version {{ i + 1 }}</strong>
+                      <strong>Version {{ i + 0 }}</strong>
                   </div>
               </div>
                 
@@ -64,7 +64,7 @@
                       <strong>Initiated On:</strong>
                     </div>
                     <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.CreatedDate }}
+                      {{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}
                     </div>
                   </div>  
 
