--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-user-mananagement-add-page/audit-user-mananagement-add-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/audit-user-mananagement-add-page/audit-user-mananagement-add-page.component.html
@@ -3,7 +3,8 @@
     <div class="row">
       <div class="col">
         <div class="d-flex justify-content-between align-items-center">
-            <h4 class="page-title"><span class="bold-text">USER CONFIGURATION</span><br><span class="bold-text">AUDIT TRIALS</span></h4>            <div class="back-icon">
+            <h4 class="page-title"><span class="bold-text">User Configuration</span><br><span class="bold-text">Audit Trails</span></h4>     
+          <div class="back-icon">
             <a href="javascript:void(0);" onclick="history.back();">
               <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
             </a>
@@ -21,7 +22,7 @@
 
                 <div class="row">
                   <div class="col-sm-3">
-                      <strong>Version {{ i + 1 }}</strong>
+                      <strong>Version {{ i + 0 }}</strong>
                   </div>
                 </div>
                 
@@ -103,7 +104,7 @@
 
                   <div class="row">
                     <div class="col-sm-3">
-                      <strong>CreatedBy:</strong>
+                      <strong>Initiated By:</strong>
                     </div>
                     <div class="col-sm-9">
                       {{ auditConfig.EntityInfo.CreatedBy }}
@@ -113,10 +114,10 @@
 
                   <div class="row">
                     <div class="col-sm-3">
-                      <strong>ModifiedBy:</strong>
+                      <strong>Initiated On:</strong>
                     </div>
                     <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.CreatedDate }}
+                      {{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}
                     </div>
                   </div>
 
