--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/auditrolegridpage/auditrolegridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/auditrolegridpage/auditrolegridpage.component.html
@@ -1,19 +1,15 @@
-
-
-
-
 <div class="container-fluid">
     <div class="row p-2">
         <div class="col">
             <div class="d-flex justify-content-between align-items-center">
-                <h4 class="page-title flex-grow-1">AUDIT TRIALS ROLE TYPE</h4>
-
+                <h4 class="page-title flex-grow-1">Role List Audit Trails</h4>
+ 
                 <div class="back-icon custom-back-icon" style="margin-right: 10px;">
                     <a href="javascript:void(0);" onclick="history.back();">
                         <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
                     </a>
                 </div>
-                
+               
                 <div class="d-flex page-title-actions">
                     <div class="input-group custom-input-group">
                         <!-- Magnifying glass icon -->
@@ -22,7 +18,7 @@
                         </span>
                         <input type="text" class="form-control custom-input" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" maxlength="250">
                     </div>
-                      
+                     
                 </div>
             </div>
         </div>
@@ -30,41 +26,40 @@
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-                <p-table #templatesTable [value]="types" 
-                [globalFilterFields]="['Documenttypename', 'documenttypeprefix', 'Description','ModifiedBy','Status']"
+                <p-table #templatesTable [value]="types"
+                [globalFilterFields]="['EntityName', 'UserName', 'CreatedDate']"
                 tableStyleClass="table table-striped"
                 [rows]="itemsPerPage"
-                [paginator]="true" 
+                [paginator]="true"
                 [totalRecords]="types.length"
                 [rowsPerPageOptions]="rowsPerPageOptions"  
                 [rowHover]="true">
                     <ng-template pTemplate="header">
                         <tr>
-                            <th>S.No</th>
+                            <th style="width:20%">S.No</th>
                            
-                             <th pSortableColumn="EntityName" style="width:20%">Entity Name<p-sortIcon field="Entity Name"></p-sortIcon></th>
-                             <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
-
-                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th>
-                             <th pSortableColumn="UserName" style="width:20%">UserName<p-sortIcon field="User Name"></p-sortIcon></th>
-                             <th pSortableColumn="ModifiedDate" style="width:1n00px">Modified Date<p-sortIcon field="ModifiedDate"></p-sortIcon></th>
+                             <th pSortableColumn="EntityName" style="width:20%">Role Comments<p-sortIcon field="EEntityName"></p-sortIcon></th>
+                             <th pSortableColumn="EntityName" style="width:20%">Role Name<p-sortIcon field="EEntityName"></p-sortIcon></th>
+                             <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
+ 
+                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
+                             <th pSortableColumn="UserName" style="width:20%">Initiated By<p-sortIcon field="UserName"></p-sortIcon></th>
+                             <th pSortableColumn="CreatedDate" style="width:20%">Initiated On<p-sortIcon field="CreatedDate"></p-sortIcon></th>
                              
-    
+   
                         </tr>
                     </ng-template>
                     <ng-template pTemplate="body" let-doc let-i="rowIndex">
                         <tr>  
                             <td>{{ i + 1 }}</td>        
                             <td>
-                                <a [routerLink]="['/auditroleaddpage']" [queryParams]="{ DocumentName: doc?.EntityName}">{{doc?.EntityName}}</a>
+                                <a [routerLink]="['/auditroleaddpage']" [queryParams]="{ DocumentName: doc?.Unique}">{{doc?.Unique}}</a>
                             </td>                
-                            <td>
-                               {{doc?.EntityName}}
-                            </td>
-                            <td>{{doc?.Message }}</td>
-                            <td>{{doc?.Type }}</td>
+                            <td>{{doc?.EntityName}}</td>
+                            <!-- <td>{{doc?.Message }}</td>
+                            <td>{{doc?.Type }}</td> -->
                             <td>{{doc?.UserName}}</td>
-                            <td>{{doc?.EntityInfo?.CreatedDate }}</td>
+                            <td>{{doc?.EntityInfo?.CreatedDate  | date:'dd/MM/yyyy HH:mm'}}</td>
                         </tr>
                     </ng-template>
                 </p-table>
@@ -72,14 +67,14 @@
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
-
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 <style>
     /* Styles for .custom-input-group */
     .custom-input-group {
@@ -95,14 +90,14 @@
             padding: 0;
             vertical-align: middle;
         }
-
+ 
         .custom-search-icon {
             font-size: 14px;
             margin-right: 5px;
             margin-left: 9px;
             color: #555;
         }
-
+ 
         .custom-input {
             border: none;
             padding: 5px;
@@ -111,17 +106,4 @@
             box-shadow: none;
         }
     </style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ 
