--- a/VlimsApp/ClientApp/src/app/modules/documents/components/audit-documet-type-new-page/audit-documet-type-new-page.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/audit-documet-type-new-page/audit-documet-type-new-page.component.scss
@@ -8,3 +8,11 @@
     /* border: 1px solid #ffcc00; /* Yellow border */
   }
   
+
+  .custom-back-icon a {
+    background: linear-gradient(90deg, rgb(11, 8, 8), rgb(59, 155, 245));  /* Set linear gradient background from purple to blue */
+    -webkit-background-clip: text; /* Clip text to the background shape */
+    background-clip: text; /* Clip text to the background shape */
+    color: transparent; /* Make the text transparent */
+    display: inline-block; /* Ensure proper rendering */
+  }
