--- a/VlimsApp/ClientApp/src/app/modules/documents/components/audittemplategridpage/audittemplategridpage.component.scss
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/audittemplategridpage/audittemplategridpage.component.scss
@@ -67,7 +67,7 @@ a{
 
 
 .custom-back-icon a {
-  background: linear-gradient(90deg, purple, blue); /* Set linear gradient background from purple to blue */
+  background: linear-gradient(90deg, rgb(11, 8, 8), rgb(59, 155, 245)); /* Set linear gradient background from purple to blue */
   -webkit-background-clip: text; /* Clip text to the background shape */
   background-clip: text; /* Clip text to the background shape */
   color: transparent; /* Make the text transparent */
