--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-effective-new-page/audit-effective-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-effective-new-page/audit-effective-new-page.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col">
         <div class="d-flex justify-content-between align-items-center">
-            <h4 class="page-title"><span class="bold-text">REQUEST TYPE</span><br><span class="bold-text">AUDIT TRIALS</span></h4>            <div class="back-icon">
+            <h4 class="page-title"><span class="bold-text"> Document Effective </span><br><span class="bold-text">Audit Trails</span></h4>            <div class="back-icon">
             <a href="javascript:void(0);" onclick="history.back();">
               <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
             </a>
@@ -20,7 +20,7 @@
                 
                 <div class="row">
                   <div class="col-sm-3">
-                      <strong>Version {{ i + 1 }}</strong>
+                      <strong>Version {{ i + 0 }}</strong>
                   </div>
               </div>
                 
@@ -82,7 +82,7 @@
                       <strong>Effective Date:</strong>
                     </div>
                     <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.EffectiveDate }}
+                      {{ auditConfig.EntityInfo.EffectiveDate | date:'dd/MM/yyyy HH:mm' }}
                     </div>
                   </div>  
 
@@ -92,26 +92,26 @@
                       <strong>Review Date:</strong>
                     </div>
                     <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.ReviewDate }}
+                      {{ auditConfig.EntityInfo.ReviewDate | date:'dd/MM/yyyy HH:mm' }}
                     </div>
                   </div>  
 
 
                   <div class="row">
                     <div class="col-sm-3">
-                      <strong>Created By:</strong>
+                      <strong>Initiated By:</strong>
                     </div>
                     <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.CreatedBy }}
+                      {{ auditConfig.EntityInfo.CreatedBy  }}
                     </div>
                   </div>  
 
                   <div class="row">
                     <div class="col-sm-3">
-                      <strong>Created Date:</strong>
+                      <strong>Initiated On:</strong>
                     </div>
                     <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.CreatedDate }}
+                      {{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}
                     </div>
                   </div>  
 
