--- a/VlimsApp/ClientApp/src/app/modules/manager/components/audit-print-new-page/audit-print-new-page.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/audit-print-new-page/audit-print-new-page.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col">
         <div class="d-flex justify-content-between align-items-center">
-            <h4 class="page-title"><span class="bold-text">Document Preparation</span><br><span class="bold-text">Audit Trails</span></h4>            <div class="back-icon">
+            <h4 class="page-title"><span class="bold-text">Docuemnt Print</span><br><span class="bold-text">Audit Trails</span></h4>            <div class="back-icon">
             <a href="javascript:void(0);" onclick="history.back();">
               <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
             </a>
@@ -38,57 +38,76 @@
 
                   <div class="row">
                     <div class="col-sm-3">
-                      <strong>Document Number:</strong>
+                      <strong>Print Type:</strong>
                     </div>
                     <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.documentno }}
+                      {{ auditConfig.EntityInfo.printtype }}
                     </div>                 
                   </div>
               
 
                   <div class="row">
                     <div class="col-sm-3">
-                      <strong>Department:</strong>
+                      <strong>Document Number:</strong>
                     </div>
                     <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.department }}
+                      {{ auditConfig.EntityInfo.DocumentNumber }}
                     </div>                 
                   </div>
 
 
                   <div class="row">
                     <div class="col-sm-3">
-                      <strong>Template Name:</strong>
+                      <strong>No Of Copies:</strong>
                     </div>
                     <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.template }}
-                    </div>     
-
-                  </div>
-
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <strong>Initiator Comments:</strong>
-                    </div>
-                    <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.details }}
-                    </div>                                   
-                  </div>
-
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <strong>Template Name:</strong>
-                    </div>
-                    <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.template }}
+                      {{ auditConfig.EntityInfo.noofcopies }}
                     </div>                 
                   </div>
 
 
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <strong>Workflow:</strong>
+                    </div>
+                    <div class="col-sm-9">
+                      {{ auditConfig.EntityInfo.workflow }}
+                    </div>                 
+                  </div>
+
 
                   <div class="row">
                     <div class="col-sm-3">
-                      <strong>Prepared By:</strong>
+                      <strong>Reasons:</strong>
+                    </div>
+                    <div class="col-sm-9">
+                      {{ auditConfig.EntityInfo.reason }}
+                    </div>                 
+                  </div>
+
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <strong>Template:</strong>
+                    </div>
+                    <div class="col-sm-9">
+                      {{ auditConfig.EntityInfo.Template }}
+                    </div>                 
+                  </div>
+
+
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <strong>PrintCopy:</strong>
+                    </div>
+                    <div class="col-sm-9">
+                      {{ auditConfig.EntityInfo.PrintCopy }}
+                    </div>                 
+                  </div>
+
+
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <strong>Printed By:</strong>
                     </div>
                     <div class="col-sm-9">
                       {{ auditConfig.EntityInfo.CreatedBy }}
@@ -99,31 +118,22 @@
                   
                   <div class="row">
                     <div class="col-sm-3">
-                      <strong>Prepared On:</strong>
+                      <strong>Printed Date:</strong>
                     </div>
                     <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm'  }}
+                      {{ auditConfig.EntityInfo.CreatedDate | date:'dd/MM/yyyy HH:mm' }}
                     </div>
                   </div>  
 
-                  <div class="row">
+
+                   <div class="row">
                     <div class="col-sm-3">
                       <strong>Status:</strong>
                     </div>
                     <div class="col-sm-9">
                       {{ auditConfig.EntityInfo.Status }}
                     </div>
-                  </div>  
-
-
-                  <!-- <div class="row">
-                    <div class="col-sm-3">
-                      <strong>Status:</strong>
-                    </div>
-                    <div class="col-sm-9">
-                      {{ auditConfig.EntityInfo.Status }}
-                    </div>
-                  </div>   -->
+                  </div>   
 
 
                   
