--- a/VlimsApp/ClientApp/src/app/modules/manager/components/auditeffectivegridpage/auditeffectivegridpage.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/auditeffectivegridpage/auditeffectivegridpage.component.html
@@ -38,12 +38,15 @@
                     <ng-template pTemplate="header">
                         <tr>
                             <th>S.No</th>
+                            <th pSortableColumn="EntityName" style="width:20%">Effective Date<p-sortIcon field="Entity Name"></p-sortIcon></th>
+                            <th pSortableColumn="EntityName" style="width:20%">Document Number<p-sortIcon field="Entity Name"></p-sortIcon></th>
+                            <th pSortableColumn="EntityName" style="width:20%">Document Title<p-sortIcon field="Entity Name"></p-sortIcon></th>
                             
-                             <th pSortableColumn="EntityName" style="width:20%">Entity Name<p-sortIcon field="Entity Name"></p-sortIcon></th>
-                             <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
-                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th>
-                             <th pSortableColumn="UserName" style="width:20%">UserName<p-sortIcon field="User Name"></p-sortIcon></th>
-                              <th pSortableColumn="ModifiedDate" style="width:1n00px">Modified Date<p-sortIcon field="ModifiedDate"></p-sortIcon></th>
+                             <!-- <th pSortableColumn="EntityName" style="width:20%">Review Date<p-sortIcon field="Entity Name"></p-sortIcon></th> -->
+                             <!-- <th pSortableColumn="Message" style="width:10%">Message<p-sortIcon field="Message"></p-sortIcon> </th>
+                             <th pSortableColumn="Type" style="width:15%">Type<p-sortIcon field="Type"></p-sortIcon></th> -->
+                             <th pSortableColumn="UserName" style="width:20%">Initiated By<p-sortIcon field="User Name"></p-sortIcon></th>
+                              <th pSortableColumn="ModifiedDate" style="width:1n00px">Initiated On<p-sortIcon field="ModifiedDate"></p-sortIcon></th>
     
                         </tr>
                     </ng-template>
@@ -53,12 +56,19 @@
                             <td>
                                 <a [routerLink]="['/auditeffectiveaddpage']" [queryParams]="{ DocumentName: doc?.Unique }">{{doc?.Unique}}</a>
                             </td>
+                            <td>{{doc?.EntityInfo?.documentno}}</td>
+                            <td>{{doc?.EntityInfo?.documenttitle}}</td>
+
+                         
+
+                           
+                           
                 
                           
-                            <td>{{doc?.Message }}</td>
-                            <td>{{doc?.Type }}</td>
+                            <!-- <td>{{doc?.Message }}</td>
+                            <td>{{doc?.Type }}</td> -->
                             <td>{{doc?.UserName}}</td>
-                            <td>{{doc?.EntityInfo?.CreatedDate }}</td>
+                            <td>{{doc?.EntityInfo?.CreatedDate | date:'dd/MM/yyyy HH:mm' }}</td>
                         </tr>
                     </ng-template>
                 </p-table>
