--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
@@ -15,7 +15,7 @@
 
 
 
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.documentRequest">
+    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.documentRequest" >
       <div class="card" (click)="navigateTo('requests')">
         <div class="card-body">
           <!-- <i class="fa fa-chart-pie"></i> -->
@@ -54,7 +54,7 @@
       </div>
     </div>-->
 
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.downloadPrint">
+    <div class="col col-lg-3"  >
       <div class="card" (click)="navigateTo('document-print')">
         <div class="card-body">
           <i class="fa fa-print"></i>
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.docrepository">
+    <div class="col col-lg-3" >
       <div class="card" (click)="navigateTo('existing-document-requests')">
         <div class="card-body">
           <i class="fa fa-print"></i>
@@ -73,7 +73,7 @@
     </div>
 
 
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.docrepository">
+    <div class="col col-lg-3" >
       <div class="card" (click)="navigateTo('existingdocuments')">
         <div class="card-body">
           <i class="fa fa-print"></i>
@@ -82,11 +82,11 @@
       </div>
     </div>
 
-    <div class="col col-lg-3">
+    <div class="col col-lg-3" >
       <div class="card" (click)="navigateTo('auditmanager')">
         <div class="card-body">
           <i class="fa fa-print"></i>
-          <h5 class="card-title">Audit Trials Document Managaer</h5>
+          <h5 class="card-title">Audit Trials</h5>
         </div>
       </div>
     </div>
