--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-manager-home/document-manager-home.component.html
@@ -15,7 +15,7 @@
 
 
 
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.documentRequest" >
+    <div class="col col-lg-3"  >
       <div class="card" (click)="navigateTo('requests')">
         <div class="card-body">
           <!-- <i class="fa fa-chart-pie"></i> -->
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.documentPreperation">
+    <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('preparations')">
         <div class="card-body">
           <i class="fa fa-pen-ruler"></i>
@@ -36,7 +36,7 @@
 
 
 
-    <div class="col col-lg-3" *ngIf="commonSrvc.userPermissions.documentEffective">
+    <div class="col col-lg-3" >
       <div class="card" (click)="navigateTo('effectives')">
         <div class="card-body">
           <i class="fa fa-square-poll-vertical"></i>
