--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -44,7 +44,7 @@
                 <th pSortableColumn="reviewDate" style="width:200px">Review Date<p-sortIcon field="reviewDate"></p-sortIcon></th>
                 <!-- <th pSortableColumn="approvedby" style="width:20%">Approved by<p-sortIcon field="approvedby"></p-sortIcon></th>
 <th pSortableColumn="approvedOn" style="width:200px">Approved On <p-sortIcon field="approvedOn"></p-sortIcon></th> -->
-                <th style="width:80px">Actions</th>
+                <!-- <th style="width:80px">Actions</th> -->
                 <th style="width:80px">Preview Document</th>
 
               </tr>
@@ -63,9 +63,9 @@
                 <td>{{existingdoc?.reviewDateValue}}</td>
                 <!-- <td>{{existingdoc?.approvedby}}</td>
 <td>{{existingdoc?.approvedOn| date}}</td> -->
-                <td class="text-center" *ngIf="access">
+                <!-- <td class="text-center" *ngIf="access">
                   <i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i>
-                </td>
+                </td> -->
                 <td *ngIf="!access">
                   <i class="bi bi-lock bi-lg"
                      [ngClass]="{'text-primary':true}"
