--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -72,7 +72,7 @@
                    title="Approved">
                    </i>
                    <span class="mx-2"></span> 
-                   <i class="bi bi-printer-fill" title="Print" (click)="previewtemplate(template1,doc)"></i>
+                   <i class="bi bi-printer-fill" title="Print" (click)="checkduplicatetemplate(template1,doc)"></i>
                  </td>
                </tr>
              </ng-template>
