--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-effective/review-effective.component.html
@@ -88,7 +88,7 @@
           <div class="form-group row">
             <label for="document" class="col-sm-2 col-form-label">Document</label>
             <div class="col-sm-10">
-              <a class="link-opacity-100-hover" (click)="previewtemplate(template)" href="javascript:void(0)">View Document</a>
+              <a class="link-opacity-100-hover" (click)="checkduplicatetemplate(template)" href="javascript:void(0)">View Document</a>
             </div>
           </div>
           
