--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -58,7 +58,7 @@
                         <!-- <td>
                             <a href="javascript:void(0)" (click)="previewtemplate(template1,template)">Preview</a>
                         </td>  -->
-                        <td><span class="status" [ngClass]="{'status-completed':true}">{{template?.Status}} </span></td>
+                        <td><span class="status" [ngClass]="{'status-completed':true}">{{template?.Status}} </span>&nbsp;&nbsp;<i class="bi bi-copy" title="Clone" (click)="CopyTemplate(template,template2)"></i></td>
                         <td class="text-center" *ngIf="access && !template?.IsParent"><i (click)="editdoc(template)" class="bi bi-pencil"></i></td>
                         <td class="text-center" *ngIf="!access">
                             <i class="bi bi-lock bi-lg" 
@@ -93,6 +93,38 @@
       </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" (click)="closeModel()">Close</button>
+    </div>
+  </ng-template>
+
+  <ng-template #template2>
+    <div class="modal-header">
+      <h4 class="modal-title pull-left">Clone Template</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="closeModel()">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+    <div class="modal-body">
+        <div class="form-group row">
+            <label for="templateName" class="col-sm-2 col-form-label">Template Name <span style="color: red; font-weight: bolder;">*</span></label>
+            <div class="col-sm-10">
+              <input type="text"
+                     class="form-control mw-350"
+                     id="Templatename"
+                     name="Templatename"
+                     placeholder="Template Name"
+                     [(ngModel)]="copytemplate.Templatename" 
+                     required
+                       #TemplatenameInput="ngModel"
+                        />
+                        <div *ngIf="TemplatenameInput.invalid && (TemplatenameInput.dirty || TemplatenameInput.touched)" class="text-danger">
+                          Enter Template Name
+                        </div>
+            </div>
+          </div>
+      </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" (click)="closeModel()">Close</button>
+      <button type="submit" class="btn btn-primary"  (click)="addTemplate(copytemplate)">Clone</button>
     </div>
   </ng-template>
 
