--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -124,7 +124,7 @@
               <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && !iscompleted" (click)="approve()">Approve</button>
             <!-- <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && !iscompleted" (click)="reinitiative()">Re-Initiative</button> -->
             <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-danger" *ngIf="viewMode && !iscompleted" (click)="reject()">Reject</button>
-            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-success" (click)="previewprint(template)">Preview</button>
+            <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-success" (click)="checkduplicatetemplate(template)">Preview</button>
             </div>
           </div>
 
