--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
@@ -80,7 +80,7 @@
           <div class="form-group row">
             <label for="document" class="col-sm-2 col-form-label">Document</label>
             <div class="col-sm-1">
-              <a class="link-opacity-100-hover" (click)="previewtemplate(template)">View Document</a>
+              <a class="link-opacity-100-hover" (click)="checkduplicatetemplate(template)">View Document</a>
             </div>
           </div>
 
